<resources>
    <string name="app_name">MedBrains Staff</string>
</resources>

